@@ -158,10 +158,6 @@ unsigned short  g_nScanPressureReadDelay     = 0;
 short           g_nScanPressureTolerance     = 0;
 #endif // FEATURE_HEAT_BED_Z_COMPENSATION || FEATURE_WORK_PART_Z_COMPENSATION
 
-#if DEBUG_REMEMBER_SCAN_PRESSURE
-short           g_ScanPressure[COMPENSATION_MATRIX_MAX_X][COMPENSATION_MATRIX_MAX_Y];
-#endif // DEBUG_REMEMBER_SCAN_PRESSURE
-
 long            g_staticZSteps              = 0;
 char            g_debugLevel                = 0;
 char            g_debugLog                  = 0;
@@ -832,10 +828,6 @@ void scanHeatBed( void )
                 adjustPressureLimits(g_nFirstIdlePressure);
 
                 // store also the version of this heat bed compensation matrix
-#if DEBUG_REMEMBER_SCAN_PRESSURE
-                g_ScanPressure[0][0]        = EEPROM_FORMAT;
-#endif // DEBUG_REMEMBER_SCAN_PRESSURE
-
                 g_ZCompensationMatrix[0][0] = EEPROM_FORMAT;
 
                 g_nHeatBedScanStatus = 40;
@@ -915,10 +907,6 @@ void scanHeatBed( void )
                 if( nX <= g_nScanXMaxPositionSteps )
                 {
                     // remember also the exact x-position of this row/column
-#if DEBUG_REMEMBER_SCAN_PRESSURE
-                    g_ScanPressure[nIndexX][0] = nX;
-#endif // DEBUG_REMEMBER_SCAN_PRESSURE
-
                     g_ZCompensationMatrix[nIndexX][0] = (short)((float)nX / Printer::axisStepsPerMM[X_AXIS] + 0.5); // convert to mm
 
                     g_nHeatBedScanStatus = 49;
@@ -1117,12 +1105,6 @@ void scanHeatBed( void )
                 g_ZCompensationMatrix[nIndexX][nIndexY] = (short)g_nZScanZPosition;
                 g_ZCompensationMatrix[0][nIndexY]       = (short)((float)nY / Printer::axisStepsPerMM[Y_AXIS] + 0.5);   // convert to mm
 
-#if DEBUG_REMEMBER_SCAN_PRESSURE
-                // remember the pressure and the exact y-position of this row/column
-                g_ScanPressure[nIndexX][nIndexY] = nContactPressure;
-                g_ScanPressure[0][nIndexY]       = nY;
-#endif // DEBUG_REMEMBER_SCAN_PRESSURE
-
                 if( nIndexX > g_uZMatrixMax[X_AXIS] )
                 {
                     g_uZMatrixMax[X_AXIS] = nIndexX;
@@ -1274,11 +1256,6 @@ void scanHeatBed( void )
             }
             case 70:
             {
-#if DEBUG_REMEMBER_SCAN_PRESSURE
-                // output the determined pressure
-                outputPressureMatrix();
-#endif // DEBUG_REMEMBER_SCAN_PRESSURE
-
                 g_nHeatBedScanStatus = 75;
 
 #if DEBUG_HEAT_BED_SCAN == 2
@@ -4090,10 +4067,6 @@ void scanWorkPart( void )
                 nIndexY          = 2;
 
                 // store also the version of this work part compensation matrix
-#if DEBUG_REMEMBER_SCAN_PRESSURE
-                g_ScanPressure[0][0] = EEPROM_FORMAT;
-#endif // DEBUG_REMEMBER_SCAN_PRESSURE
-
                 g_ZCompensationMatrix[0][0] = EEPROM_FORMAT;
 
                 g_nWorkPartScanStatus = 32;
@@ -4307,10 +4280,6 @@ void scanWorkPart( void )
                 if( nX <= g_nScanXMaxPositionSteps )
                 {
                     // remember also the exact x-position of this row/column
-#if DEBUG_REMEMBER_SCAN_PRESSURE
-                    g_ScanPressure[nIndexX][0] = nX;
-#endif // DEBUG_REMEMBER_SCAN_PRESSURE
-
                     g_ZCompensationMatrix[nIndexX][0] = (short)((float)nX / Printer::axisStepsPerMM[X_AXIS] + 0.5); // convert to mm
 
                     g_nWorkPartScanStatus = 49;
@@ -4506,12 +4475,6 @@ void scanWorkPart( void )
                 g_ZCompensationMatrix[nIndexX][nIndexY] = (short)g_nZScanZPosition;
                 g_ZCompensationMatrix[0][nIndexY]       = (short)((float)nY / Printer::axisStepsPerMM[Y_AXIS] + 0.5);   // convert to mm
 
-#if DEBUG_REMEMBER_SCAN_PRESSURE
-                // remember the pressure and the exact y-position of this row/column
-                g_ScanPressure[nIndexX][nIndexY] = nContactPressure;
-                g_ScanPressure[0][nIndexY]       = nY;
-#endif // DEBUG_REMEMBER_SCAN_PRESSURE
-
                 if( nIndexX > g_uZMatrixMax[X_AXIS] )
                 {
                     g_uZMatrixMax[X_AXIS] = nIndexX;
@@ -4657,11 +4620,6 @@ void scanWorkPart( void )
             }
             case 70:
             {
-#if DEBUG_REMEMBER_SCAN_PRESSURE
-                // output the determined pressure
-                outputPressureMatrix();
-#endif // DEBUG_REMEMBER_SCAN_PRESSURE
-
                 g_nWorkPartScanStatus = 75;
 
 #if DEBUG_WORK_PART_SCAN == 2
@@ -6017,31 +5975,6 @@ void clearCompensationMatrix( unsigned int uAddress )
     }
 } // clearCompensationMatrix
 
-
-#if DEBUG_REMEMBER_SCAN_PRESSURE
-void outputPressureMatrix( void )
-{
-    if( Printer::debugInfo() )
-    {
-        short   i;
-        short   j;
-
-
-        Com::printFLN( PSTR( "Pressure matrix:" ) );
-        Com::printFLN( PSTR( "front left ... front right" ) );
-        Com::printFLN( PSTR( "...        ...         ..." ) );
-        Com::printFLN( PSTR( "back left  ...  back right" ) );
-        for( i=0; i<COMPENSATION_MATRIX_MAX_Y; i++ )
-        {
-            for( j=0; j<COMPENSATION_MATRIX_MAX_X; j++ )
-            {
-                Com::printF( Com::tSemiColon, g_ScanPressure[j][i] );
-            }
-            Com::printFLN( PSTR( " " ) );
-        }
-    }
-} // outputPressureMatrix
-#endif // DEBUG_REMEMBER_SCAN_PRESSURE
 #endif // FEATURE_HEAT_BED_Z_COMPENSATION || FEATURE_WORK_PART_Z_COMPENSATION
 
 
@@ -6555,7 +6488,7 @@ void loopRF( void ) //wird so aufgerufen, dass es ein ~100ms takt sein sollte.
 
     if( g_uStopTime )
     {
-        if( (uTime - g_uStopTime) > CLEAN_UP_DELAY_AFTER_STOP_PRINT ) //jede 1 sekunden  wäre standard nach config
+        if( (uTime - g_uStopTime) > 1000 ) //jede 1 sekunden  wäre standard nach config
         {
             // we have stopped the printing a few moments ago, output the object now
             if( PrintLine::linesCount )
@@ -6626,7 +6559,7 @@ void loopRF( void ) //wird so aufgerufen, dass es ein ~100ms takt sein sollte.
     }
     if( g_uBlockCommands > 1 ) //=1 scheint zu blocken, dann muss g_uStopTime aktiv sein und hier drüber erst eine Uhrzeit reinsetzen.
     {
-        if( (uTime - g_uBlockCommands) > COMMAND_BLOCK_DELAY ) //jede 1 sekunden wäre standard nach config
+        if( (uTime - g_uBlockCommands) > 1000 ) //jede 1 sekunden wäre standard nach config
         {
             g_uBlockCommands = 0;
             // output the object
@@ -13457,15 +13390,6 @@ float getHeatBedTemperatureOffset( float temperatureInCelsius )
 
         temp =  (deltaHigh - deltaLow) / float(setpointTemperatures[0]);
         temp *= temperatureInCelsius;
-
-#if DEBUG_HEAT_BED_TEMP_COMPENSATION
-        if( temperatureInCelsius > 50 )
-        {
-            Com::printF( PSTR( "getHeatBedTemperatureOffset(): " ), temperatureInCelsius );
-            Com::printFLN( PSTR( ", " ), temp );
-        }
-#endif // DEBUG_HEAT_BED_TEMP_COMPENSATION
-
         return temp;
     }
 
@@ -13473,12 +13397,6 @@ float getHeatBedTemperatureOffset( float temperatureInCelsius )
     {
         // the specified temperature is above our known, measured values
         temp = measuredTemperatures[BED_TEMP_COMPENSATION_INDEX_MAX] - setpointTemperatures[BED_TEMP_COMPENSATION_INDEX_MAX];
-
-#if DEBUG_HEAT_BED_TEMP_COMPENSATION
-        Com::printF( PSTR( "getHeatBedTemperatureOffset(): " ), temperatureInCelsius );
-        Com::printFLN( PSTR( ", " ), temp );
-#endif // DEBUG_HEAT_BED_TEMP_COMPENSATION
-
         return temp;
     }
 
@@ -13491,12 +13409,6 @@ float getHeatBedTemperatureOffset( float temperatureInCelsius )
 
             temp =  (deltaHigh - deltaLow) / float(setpointTemperatures[i] - setpointTemperatures[i-1]);
             temp *= (temperatureInCelsius - setpointTemperatures[i-1]);
-
-#if DEBUG_HEAT_BED_TEMP_COMPENSATION
-            Com::printF( PSTR( "getHeatBedTemperatureOffset(): " ), temperatureInCelsius );
-            Com::printFLN( PSTR( ", " ), temp + deltaLow );
-#endif // DEBUG_HEAT_BED_TEMP_COMPENSATION
-
             return (temp + deltaLow);
         }
     }
