@@ -8,6 +8,8 @@ V RF.01.41.18.Mod (2018-04-08)
 - removed DEBUG_SPLIT
 - removed DEBUG_PRINT
 - removed ANALYZER defines
+- removed DEBUG_REMEMBER_SCAN_PRESSURE
+- removed DEBUG_HEAT_BED_TEMP_COMPENSATION
 ...
 
 V RF.01.41.17.Mod (2018-04-02) 
